improve logic, add banner

--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,11 @@
 [DEFAULT]
-os = macOS
-user_root = /Users/lnzna
-last_run = 2024-02-18 23:12:41
+os =
+user_root =
 
 [MAFIA_BUILD]
 kolmafia_build_url = https://ci.kolmafia.us/job/Kolmafia/lastSuccessfulBuild/
-last_run = 
-last_updated = 
-jar_version = 27826
-jar_hash = 
-mafia_folder = /Users/lnzna/Documents/KoLmafia
+last_run =
+last_updated =
+jar_version =
+mafia_folder =
 
